envoy/envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 3000
      filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              '@type': "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: local_service
                    domains: ["*"]
                    routes:
                      - match: {prefix: "/"}
                        route:
                          cluster: backend_cluster
              http_filters:
                - name: envoy.filters.http.router
  clusters:
    - name: backend_cluster
      connect_timeout: 0.25s
      lb_policy: ROUND_ROBIN
      type: strict_dns
      load_assignment:
        cluster_name: backend_cluster
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 8000
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 8001
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 8002
            - endpoint:
                address:
                  socket_address:
                    address: 0.0.0.0
                    port_value: 8003
